# linebot-voice-assistant

./: .env-sample  .gitignore  README.md  ai.py  app.py  disease_index.faiss  disease_metadata.pkl  line_bot.py  md_to_faiss.py  pyproject.toml  render.yaml  requirements.txt  routes.py
prompts/: __init__.py  medical_advisor.py
template/: clinic_reply.json  sound_reply.json  text_reply.json
utils/: __init__.py  flex_message_converter.py
