[project]
name = "linebot-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "line-bot-sdk>=3.16.3",
    "openai>=1.82.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "speechrecognition==3.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
